[workspace]
resolver = "2"
members = [
    "crates/zino",
    "crates/zino-actix",
    "crates/zino-ai",
    "crates/zino-amis",
    "crates/zino-auth",
    "crates/zino-axum",
    "crates/zino-chart",
    "crates/zino-chatbot",
    "crates/zino-connector",
    "crates/zino-core",
    "crates/zino-derive",
    "crates/zino-dioxus",
    "crates/zino-extra",
    "crates/zino-http",
    "crates/zino-middleware",
    "crates/zino-model",
    "crates/zino-ntex",
    "crates/zino-openapi",
    "crates/zino-orm",
    "crates/zino-router",
    "crates/zino-rpc",
    "crates/zino-salvo",
    "crates/zino-server",
    "crates/zino-storage",
]

[workspace.dependencies]
ahash = "0.8.11"
apache-avro = "0.17.0"
bytes = "1.9.0"
cfg-if = "1.0"
convert_case = "0.7.1"
etag = "4.0.0"
futures = "0.3.31"
hmac = "0.12.1"
http = "1.2.0"
metrics = "0.24.1"
mime_guess = "2.0.5"
parking_lot = "0.12.3"
percent-encoding = "2.3.1"
rand = "0.9.0"
regex = "1.11.1"
rust_decimal = "1.36.0"
serde_qs = "0.13.0"
sm3 = "0.4.2"
smallvec = "1.14.0"
tracing = "0.1.41"
url = "2.5.4"

[workspace.dependencies.chrono]
version = "0.4.39"
features = ["serde"]

[workspace.dependencies.jwt-simple]
version = "0.12.11"
default-features = false
features = ["pure-rust"]

[workspace.dependencies.multer]
version = "3.1.0"
features = ["json"]

[workspace.dependencies.reqwest]
version = "0.12.12"
default-features = false
features = [
    "blocking",
    "gzip",
    "json",
    "multipart",
]

[workspace.dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "chrono",
    "json",
    "rust_decimal",
    "uuid",
]

[workspace.dependencies.serde]
version = "1.0.218"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.139"
features = ["raw_value"]

[workspace.dependencies.tokio]
version = "1.43.0"
features = [
    "macros",
    "net",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "time",
]

[workspace.dependencies.toml]
version = "0.8.20"
default-features = false
features = ["parse"]

[workspace.dependencies.uuid]
version = "1.15.0"
features = [
    "fast-rng",
    "serde",
    "v4",
    "v7",
]

[workspace.dependencies.zino-auth]
path = "crates/zino-auth"
version = "0.4.1"

[workspace.dependencies.zino-core]
path = "crates/zino-core"
version = "0.32.2"

[workspace.dependencies.zino-channel]
path = "crates/zino-channel"
version = "0.4.1"

[workspace.dependencies.zino-derive]
path = "crates/zino-derive"
version = "0.30.2"

[workspace.dependencies.zino-http]
path = "crates/zino-http"
version = "0.4.2"

[workspace.dependencies.zino-openapi]
path = "crates/zino-openapi"
version = "0.3.1"

[workspace.dependencies.zino-orm]
path = "crates/zino-orm"
version = "0.4.2"

[workspace.dependencies.zino-storage]
path = "crates/zino-storage"
version = "0.4.1"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unreachable_pub = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
