[workspace]
resolver = "2"
members = [
    "crates/zino",
    "crates/zino-actix",
    "crates/zino-ai",
    "crates/zino-amis",
    "crates/zino-auth",
    "crates/zino-axum",
    "crates/zino-chart",
    "crates/zino-chatbot",
    "crates/zino-connector",
    "crates/zino-core",
    "crates/zino-derive",
    "crates/zino-dioxus",
    "crates/zino-extra",
    "crates/zino-http",
    "crates/zino-middleware",
    "crates/zino-model",
    "crates/zino-ntex",
    "crates/zino-openapi",
    "crates/zino-orm",
    "crates/zino-router",
    "crates/zino-rpc",
    "crates/zino-salvo",
    "crates/zino-server",
    "crates/zino-storage",
]

[workspace.package]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
ahash = "0.8.12"
apache-avro = "0.19.0"
bytes = "1.10.1"
cfg-if = "1.0.1"
convert_case = "0.8.0"
etag = "4.0.0"
fluent = "0.17.0"
futures = "0.3.31"
hmac = "0.12.1"
http = "1.3.1"
metrics = "0.24.2"
mime_guess = "2.0.5"
parking_lot = "0.12.4"
percent-encoding = "2.3.1"
rand = "0.9.2"
regex = "1.11.1"
rust_decimal = "1.37.2"
serde_qs = "0.15.0"
sm3 = "0.4.2"
smallvec = "1.15.1"
tracing = "0.1.41"
unic-langid = "0.9.6"
url = "2.5.4"

[workspace.dependencies.chrono]
version = "0.4.41"
features = ["serde"]

[workspace.dependencies.jwt-simple]
version = "0.12.12"
default-features = false
features = ["pure-rust"]

[workspace.dependencies.multer]
version = "3.1.0"
features = ["json"]

[workspace.dependencies.reqwest]
version = "0.12.22"
default-features = false
features = [
    "blocking",
    "gzip",
    "json",
    "multipart",
]

[workspace.dependencies.serde]
version = "1.0.219"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.142"
features = ["raw_value"]

[workspace.dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "chrono",
    "json",
    "rust_decimal",
    "uuid",
]

[workspace.dependencies.tokio]
version = "1.47.1"
features = [
    "macros",
    "net",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "time",
]

[workspace.dependencies.toml]
version = "0.9.5"
default-features = false
features = ["parse", "serde"]

[workspace.dependencies.uuid]
version = "1.17.0"
features = [
    "fast-rng",
    "serde",
    "v4",
    "v7",
]

[workspace.dependencies.zino-auth]
path = "crates/zino-auth"
version = "0.10.0"

[workspace.dependencies.zino-core]
path = "crates/zino-core"
version = "0.38.0"

[workspace.dependencies.zino-channel]
path = "crates/zino-channel"
version = "0.10.0"

[workspace.dependencies.zino-derive]
path = "crates/zino-derive"
version = "0.36.0"

[workspace.dependencies.zino-http]
path = "crates/zino-http"
version = "0.10.0"

[workspace.dependencies.zino-openapi]
path = "crates/zino-openapi"
version = "0.9.0"

[workspace.dependencies.zino-orm]
path = "crates/zino-orm"
version = "0.10.0"

[workspace.dependencies.zino-storage]
path = "crates/zino-storage"
version = "0.10.0"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unreachable_pub = "deny"

[workspace.lints.clippy]
print_stdout = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
