[package]
name = "zino"
description = "A minimal MVC framework"
version = "0.1.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/photino/zino"
repository = "https://github.com/photino/zino"
documentation = "https://docs.rs/zino"
readme = "README.md"

[dependencies]
aes-gcm-siv = { version = "0.11.1" }
async-trait = { version = "0.1.60" }
base64 = { version = "0.20.0" }
futures = { version = "0.3.25" }
hmac = { version = "0.12.1" }
http-types = { version = "2.12.0" }
rand = { version = "0.8.5" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }
sha-1 = { version = "0.10.1" }
sha2 = { version = "0.10.6" }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
time = { version = "0.3.17", features = ["local-offset", "parsing", "serde"] }
toml = { version = "0.5.10" }
url = { version = "2.3.1" }
uuid = { version = "1.2.2", features = ["serde", "v4"] }