[package]
name = "zino-derive"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/photino/zino"
repository = "https://github.com/photino/zino"
documentation = "https://docs.rs/zino-derive"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0.21" }
syn = { version = "1.0.105", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0.47" }

[dependencies.zino]
path = "../lib"
