[package]
name = "zino-actix"
description = "Integrations with actix-web for zino."
version = "0.1.1"
rust-version = "1.80"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-actix"
readme = "README.md"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
futures = "0.3.31"
tracing = "0.1.40"

[dependencies.actix-web]
version = "4.9.0"
default-features = false
features = ["compress-gzip"]

[dependencies.tracing-actix-web]
version = "0.7.15"
features = ["opentelemetry_0_27", "uuid_v7"]

[dependencies.utoipa-rapidoc]
version = "5.0.0"
features = ["actix-web"]

[dependencies.zino-core]
path = "../zino-core"
version = "0.27.1"
features = [
    "http02",
    "openapi",
    "runtime-tokio",
]
