[package]
name = "zino-amis"
description = "UI generator for amis."
version = "0.2.0"
rust-version = "1.80"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/zino-rs/zino"
repository = "https://github.com/zino-rs/zino"
documentation = "https://docs.rs/zino-amis"
readme = "README.md"

[dependencies]
hyper-staticfile = "0.10.1"
phf = "0.11.2"
serde_json = "1.0.133"
tracing = "0.1.41"

[dependencies.hyper]
version = "1.5.1"
features = ["http1", "server"]

[dependencies.hyper-util]
version = "0.1.10"
features = ["http1", "tokio"]

[dependencies.tokio]
version = "1.42.0"
features = [
    "net",
    "rt-multi-thread",
    "time",
]

[dependencies.toml]
version = "0.8.19"
default-features = false
features = ["parse"]

[dependencies.zino-core]
path = "../zino-core"
version = "0.29.1"
features = ["tracing-subscriber"]
