[package]
name = "zino-core"
description = "Core types and traits for zino."
version = "0.15.4"
rust-version = "1.73"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming::http-server"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/photino/zino"
repository = "https://github.com/photino/zino"
documentation = "https://docs.rs/zino-core"
readme = "README.md"

[package.metadata.docs.rs]
features = ["full", "runtime-tokio"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
accessor = ["opendal"]
accessor-azblob = ["accessor", "opendal/services-azblob"]
accessor-azdls = ["accessor", "opendal/services-azdls"]
accessor-cacache = ["accessor", "opendal/services-cacache"]
accessor-cos = ["accessor", "opendal/services-cos"]
accessor-dashmap = ["accessor", "opendal/services-dashmap"]
accessor-dropbox = ["accessor", "opendal/services-dropbox"]
accessor-fs = ["accessor", "opendal/services-fs"]
accessor-ftp = ["accessor", "opendal/services-ftp"]
accessor-gcs = ["accessor", "opendal/services-gcs"]
accessor-gdrive = ["accessor", "opendal/services-gdrive"]
accessor-ghac = ["accessor", "opendal/services-ghac"]
accessor-http = ["accessor", "opendal/services-http"]
accessor-ipfs = ["accessor", "opendal/services-ipfs"]
accessor-ipmfs = ["accessor", "opendal/services-ipmfs"]
accessor-memcached = ["accessor", "opendal/services-memcached"]
accessor-memory = ["accessor", "opendal/services-memory"]
accessor-mini-moka = ["accessor", "opendal/services-mini-moka"]
accessor-moka = ["accessor", "opendal/services-moka"]
accessor-mysql = ["accessor", "opendal/services-mysql"]
accessor-obs = ["accessor", "opendal/services-obs"]
accessor-onedrive = ["accessor", "opendal/services-onedrive"]
accessor-oss = ["accessor", "opendal/services-oss"]
accessor-persy = ["accessor", "opendal/services-persy"]
accessor-postgresql = ["accessor", "opendal/services-postgresql"]
accessor-redb = ["accessor", "opendal/services-redb"]
accessor-redis = ["accessor", "opendal/services-redis"]
accessor-s3 = ["accessor", "opendal/services-s3"]
accessor-sled = ["accessor", "opendal/services-sled"]
accessor-sqlite = ["accessor", "opendal/services-sqlite"]
accessor-supabase = ["accessor", "opendal/services-supabase"]
accessor-webdav = ["accessor", "opendal/services-webdav"]
accessor-webhdfs = ["accessor", "opendal/services-webhdfs"]
all-accessors = [
    "accessor",
    "accessor-azblob",
    "accessor-azdls",
    "accessor-cacache",
    "accessor-cos",
    "accessor-dashmap",
    "accessor-dropbox",
    "accessor-fs",
    "accessor-ftp",
    "accessor-gcs",
    "accessor-gdrive",
    "accessor-ghac",
    "accessor-http",
    "accessor-ipfs",
    "accessor-ipmfs",
    "accessor-memcached",
    "accessor-memory",
    "accessor-mini-moka",
    "accessor-moka",
    "accessor-mysql",
    "accessor-obs",
    "accessor-onedrive",
    "accessor-oss",
    "accessor-persy",
    "accessor-postgresql",
    "accessor-redb",
    "accessor-redis",
    "accessor-s3",
    "accessor-sled",
    "accessor-sqlite",
    "accessor-supabase",
    "accessor-webdav",
    "accessor-webhdfs",
]
all-auth = ["auth-oauth2", "auth-oidc", "auth-totp"]
all-chatbots = ["chatbot", "chatbot-openai"]
all-connectors = [
    "connector",
    "connector-arrow",
    "connector-http",
    "connector-mysql",
    "connector-postgres",
    "connector-sqlite",
]
auth-oauth2 = ["dep:oauth2"]
auth-oidc = ["dep:openidconnect"]
auth-totp = ["dep:totp-rs"]
chatbot = []
chatbot-openai = ["dep:async-openai", "chatbot"]
connector = ["connector-http"]
connector-arrow = ["dep:datafusion", "connector"]
connector-http = ["connector"]
connector-mysql = ["connector", "sqlx", "sqlx/mysql"]
connector-postgres = ["connector", "sqlx", "sqlx/postgres"]
connector-sqlite = ["connector", "sqlx", "sqlx/sqlite"]
crypto-sm = ["dep:ctr", "dep:sm3", "dep:sm4"]
default = ["runtime-tokio", "tls-rustls"]
full = [
    "all-accessors",
    "all-auth",
    "all-chatbots",
    "all-connectors",
    "orm",
    "view",
]
orm = ["sqlx", "sqlx/sqlite"]
orm-mariadb = ["orm", "sqlx/mysql"]
orm-mysql = ["orm", "sqlx/mysql"]
orm-postgres = ["orm", "sqlx/postgres"]
orm-sqlite = ["orm", "sqlx/sqlite"]
orm-tidb = ["orm", "sqlx/mysql"]
runtime-async-std = ["sqlx?/runtime-async-std"]
runtime-tokio = ["sqlx?/runtime-tokio"]
tls-native = [
    "opendal?/native-tls",
    "reqwest/native-tls",
    "sqlx?/tls-native-tls",
    "ureq/native-tls",
]
tls-rustls = [
    "opendal?/rustls",
    "reqwest/rustls-tls",
    "sqlx?/tls-rustls",
    "ureq/rustls",
]
view = ["dep:minijinja"]
view-minijinja = ["view", "dep:minijinja"]
view-tera = ["view", "dep:tera"]

[dependencies]
aes-gcm-siv = "0.11.1"
apache-avro = "0.16.0"
base64 = "0.21.5"
bytes = "1.5.0"
cfg-if = "1.0"
convert_case = "0.6.0"
cookie = "0.18.0"
cron = "0.12.0"
csv = "1.3.0"
dotenvy = "0.15.7"
etag = "4.0.0"
faster-hex = "0.8.1"
fluent = "0.16.0"
futures = "0.3.29"
hkdf = "0.12.3"
hmac = "0.12.1"
http = "0.2.11"
http-body = "0.4.5"
intl-memoizer = "0.5.1"
jwt-simple = "0.11.9"
md-5 = "0.10.6"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
mime = "0.3.17"
mime_guess = "2.0.4"
multer = "2.1.0"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.10.2"
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
reqwest-tracing = "0.4.6"
rmp-serde = "1.1.2"
ryu = "1.0.15"
serde_qs = "0.12.0"
sha2 = "0.10.8"
sysinfo = "0.29.10"
task-local-extensions = "0.1.4"
toml = "0.8.8"
tracing = "0.1.40"
tracing-appender = "0.2.3"
url = "2.4.1"

[dependencies.argon2]
version = "0.5.2"
features = ["std"]

[dependencies.async-openai]
version = "0.16.3"
optional = true

[dependencies.chrono]
version = "0.4.31"
features = ["serde"]

[dependencies.ctr]
version = "0.9.2"
optional = true

[dependencies.datafusion]
version = "33.0.0"
optional = true

[dependencies.minijinja]
version = "1.0.10"
optional = true
features = ["debug", "loader"]

[dependencies.oauth2]
version = "4.4.2"
optional = true

[dependencies.opendal]
version = "0.42.0"
optional = true
default-features = false
features = ["layers-all"]

[dependencies.openidconnect]
version = "3.4.0"
optional = true

[dependencies.reqwest]
version = "0.11.22"
default-features = false
features = [
    "cookies",
    "gzip",
    "json",
    "multipart",
    "stream",
]

[dependencies.serde]
version = "1.0.192"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.108"
features = ["raw_value"]

[dependencies.sm3]
version = "0.4.2"
optional = true

[dependencies.sm4]
version = "0.5.1"
optional = true

[dependencies.smallvec]
version = "1.11.2"
features = ["serde"]

[dependencies.sqlx]
version = "0.7.2"
optional = true
features = [
    "chrono",
    "rust_decimal",
    "uuid",
]

[dependencies.tera]
version = "1.19.1"
optional = true

[dependencies.totp-rs]
version = "5.4.0"
optional = true
features = ["otpauth", "qr"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = [
    "env-filter",
    "json",
    "local-time",
    "parking_lot",
]

[dependencies.unic-langid]
version = "0.9.1"
features = ["macros"]

[dependencies.ureq]
version = "2.8.0"
default-features = false
features = ["gzip", "json"]

[dependencies.utoipa]
version = "4.1.0"
features = [
    "non_strict_integers",
    "preserve_order",
    "preserve_path_order",
    "uuid",
]

[dependencies.uuid]
version = "1.5.0"
features = [
    "fast-rng",
    "serde",
    "v4",
    "v7",
]

[dev-dependencies]
anyhow = "1.0.75"
arrayvec = "0.7.4"
base64-simd = "0.8.0"
criterion = "0.5.1"
data-encoding = "2.4.0"
libsm = "0.5.1"
sm3 = "0.4.2"
sonic-rs = "0.2.4"
tinyvec = { version = "1.6.0", features = ["alloc"] }
uuid-simd = "0.8.0"

[[bench]]
name = "criterion_main"
harness = false
